<resources>
    <string name="app_name">PurpleLock</string>
    <string name="pwscreen_line1">This app is locked.</string>
    <string name="pwscreen_line2">Please enter your password to unlock it.</string>
    <string name="password_hint">Password</string>
    <string name="initial_password_hint">Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="current_password_text">Enter current password:</string>
    <string name="new_password_text">Enter new password:</string>
    <string name="confirm_new_password_text">Confirm new password:</string>
    <string name="persistent_check">Keep app unlocked, even when I lock my phone</string>
    <string name="unlock_all_check">Unlock all my apps, not just this one</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="main_screen_tab_1">Locked Apps</string>
    <string name="main_screen_tab_2">Change Password</string>
    <string name="lock_text_on"   >PurpleLock is ENABLED</string>
    <string name="lock_text_off"  >PurpleLock lock is DISABLED</string>
    <string name="lock_button_on" >Disable PurpleLock</string>
    <string name="lock_button_off">Enable PurpleLock</string>
    <string name="locked_apps_title">Check an app to lock it:</string>
    <string name="password_wrong_toast">Incorrect password</string>
    <string name="current_password_wrong_toast">Entered current password is incorrect</string>
    <string name="new_password_not_match_toast">New passwords don\'t match</string>
    <string name="no_blank_pass_toast">Cannot choose a blank password</string>
    <string name="password_change_success_toast">Successfully changed password</string>
    <string name="password_set_success_toast">Successfully set password</string>
    <string name="initial_password_wrong_toast">Incorrect password</string>
    <string name="password_alert">Please enter the password you want to use to unlock apps. Passwords are stored securely (using a hash function with random salt).</string>
    <string name="service_alert">PurpleLock runs using an accessibility service. Please enable PurpleLock in your settings.</string>
    <string name="password_alert_button">Set Password</string>
    <string name="password_alert_hint">Password</string>
    <string name="service_alert_button">Enable Service</string>
    <string name="accessibility_service_description">PurpleLock uses an accessibility service to determine which app is currently on, and to be able to draw a lock screen over it. None of your information is shared or saved by this service.</string>
    <string name="initial_password_title">Please enter your PurpleLock password to continue:</string>
</resources>