<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="10dp">

    <!-- TODO LATER COSMETIC - maybe show app name and/or icon -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwscreen_line1"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pwscreen_line2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/persistent_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persistent_check" />

    <CheckBox
        android:id="@+id/unlock_all_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlock_all_check" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_500" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_500" />
    <!-- TODO LATER this is incredibly stupid that I have to manually set colors -->

</LinearLayout>
