<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/initial_password_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:gravity="center_horizontal"
            android:text="@string/initial_password_title"/>

        <EditText
            android:id="@+id/initial_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:gravity="center"
            android:hint="@string/initial_password_hint"
            android:imeOptions="actionGo"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="initialSubmit"
            android:text="@string/submit" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <!-- LOCK TOGGLE -->

        <TextView
            android:id="@+id/lock_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/lock_toggle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="lockToggleButton" />


        <!-- TAB LIST -->

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/tab_layout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_screen_tab_1" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_screen_tab_2" />

        </com.google.android.material.tabs.TabLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />


        <!-- LOCKED APPS TAB -->

        <LinearLayout
            android:id="@+id/tab_1_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/locked_apps_title" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/app_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- generated content goes here -->
                </LinearLayout>
            </ScrollView>

        </LinearLayout>


        <!-- CHANGE PASSWORD TAB -->

        <LinearLayout
            android:id="@+id/tab_2_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password_text" />

            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="center"
                android:hint="@string/current_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password_text" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="center"
                android:hint="@string/new_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_password_text" />

            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="center"
                android:hint="@string/confirm_new_password_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/submit_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="changePassButton" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>